--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,22 @@
   "name": "TrackRak In-Store Activator",
   "version": "1.0.0",
   "description": "Widget to authenticate TrackRak premium users, collect Rakuten IDs and activate in-store offers.",
+  "icons": {
+    "16": "src/assets/icon16.png",
+    "32": "src/assets/icon32.png",
+    "48": "src/assets/icon48.png",
+    "128": "src/assets/icon128.png"
+  },
   "action": {
-    "default_title": "TrackRak"
+    "default_title": "TrackRak",
+    "default_icon": {
+      "16": "src/assets/icon16.png",
+      "32": "src/assets/icon32.png",
+      "48": "src/assets/icon48.png"
+    }
+  },
+  "background": {
+    "service_worker": "src/background.js"
   },
   "permissions": ["storage"],
   "host_permissions": ["<all_urls>"],
@@ -18,7 +32,11 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["src/styles/*", "src/assets/*"],
+      "resources": [
+        "src/styles/*",
+        "src/assets/*",
+        "assets/*"
+      ],
       "matches": ["<all_urls>"]
     }
   ]
